include/El/core/DistMatrix.h

/* NOTE: "ElInt* rowInd" and "ElInt* colInd" have been converted to 
         "ElInt* rowInd" and "ElInt* colInd" due to what appears to be a bug
         in /usr/bin/c++ in Ubuntu */

typedef struct 
{
    ElDist colDist, rowDist;
    int colAlign, rowAlign;
    int root;
    ElConstGrid grid;
} ElElementalData;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* Int AbstractDistMatrix<T>::LocalRowOffset( Int i ) const
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalRowOffset_i
( ElConstDistMatrix_i A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRowOffset_s
( ElConstDistMatrix_s A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRowOffset_d
( ElConstDistMatrix_d A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRowOffset_c
( ElConstDistMatrix_c A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRowOffset_z
( ElConstDistMatrix_z A, ElInt i, ElInt* iLoc );
/* Int AbstractDistMatrix<T>::LocalColOffset( Int j ) const
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalColOffset_i
( ElConstDistMatrix_i A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalColOffset_s
( ElConstDistMatrix_s A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalColOffset_d
( ElConstDistMatrix_d A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalColOffset_c
( ElConstDistMatrix_c A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalColOffset_z
( ElConstDistMatrix_z A, ElInt j, ElInt* jLoc );
/* Int AbstractDistMatrix<T>::GlobalRow( Int iLoc ) const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixGlobalRow_i
( ElConstDistMatrix_i A, ElInt iLoc, ElInt* i );
EL_EXPORT ElError ElDistMatrixGlobalRow_s
( ElConstDistMatrix_s A, ElInt iLoc, ElInt* i );
EL_EXPORT ElError ElDistMatrixGlobalRow_d
( ElConstDistMatrix_d A, ElInt iLoc, ElInt* i );
EL_EXPORT ElError ElDistMatrixGlobalRow_c
( ElConstDistMatrix_c A, ElInt iLoc, ElInt* i );
EL_EXPORT ElError ElDistMatrixGlobalRow_z
( ElConstDistMatrix_z A, ElInt iLoc, ElInt* i );
/* Int AbstractDistMatrix<T>::GlobalCol( Int jLoc ) const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixGlobalCol_i
( ElConstDistMatrix_i A, ElInt jLoc, ElInt* j );
EL_EXPORT ElError ElDistMatrixGlobalCol_s
( ElConstDistMatrix_s A, ElInt jLoc, ElInt* j );
EL_EXPORT ElError ElDistMatrixGlobalCol_d
( ElConstDistMatrix_d A, ElInt jLoc, ElInt* j );
EL_EXPORT ElError ElDistMatrixGlobalCol_c
( ElConstDistMatrix_c A, ElInt jLoc, ElInt* j );
EL_EXPORT ElError ElDistMatrixGlobalCol_z
( ElConstDistMatrix_z A, ElInt jLoc, ElInt* j );
/* bool AbstractDistMatrix<T>::IsLocalRow( Int i ) const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixIsLocalRow_i
( ElConstDistMatrix_i A, ElInt i, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalRow_s
( ElConstDistMatrix_s A, ElInt i, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalRow_d
( ElConstDistMatrix_d A, ElInt i, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalRow_c
( ElConstDistMatrix_c A, ElInt i, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalRow_z
( ElConstDistMatrix_z A, ElInt i, bool* isLocal );
/* bool AbstractDistMatrix<T>::IsLocalCol( Int j ) const
   ----------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixIsLocalCol_i
( ElConstDistMatrix_i A, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalCol_s
( ElConstDistMatrix_s A, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalCol_d
( ElConstDistMatrix_d A, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalCol_c
( ElConstDistMatrix_c A, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocalCol_z
( ElConstDistMatrix_z A, ElInt j, bool* isLocal );
/* bool AbstractDistMatrix<T>::IsLocal( Int i, Int j ) const
   --------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixIsLocal_i
( ElConstDistMatrix_i A, ElInt i, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocal_s
( ElConstDistMatrix_s A, ElInt i, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocal_d
( ElConstDistMatrix_d A, ElInt i, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocal_c
( ElConstDistMatrix_c A, ElInt i, ElInt j, bool* isLocal );
EL_EXPORT ElError ElDistMatrixIsLocal_z
( ElConstDistMatrix_z A, ElInt i, ElInt j, bool* isLocal );
/* DistData ElementalMatrix<T>::DistData() const
   --------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDistData_i
( ElConstDistMatrix_i A, ElElementalData* distData );
EL_EXPORT ElError ElDistMatrixDistData_s
( ElConstDistMatrix_s A, ElElementalData* distData );
EL_EXPORT ElError ElDistMatrixDistData_d
( ElConstDistMatrix_d A, ElElementalData* distData );
EL_EXPORT ElError ElDistMatrixDistData_c
( ElConstDistMatrix_c A, ElElementalData* distData );
EL_EXPORT ElError ElDistMatrixDistData_z
( ElConstDistMatrix_z A, ElElementalData* distData );
/* mpi::Comm AbstractDistMatrix<T>::DistComm() const
   ------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDistComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixDistComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixDistComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixDistComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixDistComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::CrossComm() const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixCrossComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixCrossComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixCrossComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixCrossComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixCrossComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::RedundantComm() const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixRedundantComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRedundantComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRedundantComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRedundantComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRedundantComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::ColComm() const
   ------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixColComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixColComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixColComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixColComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixColComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::RowComm() const
   ------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixRowComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRowComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRowComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRowComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixRowComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::PartialColComm() const
   ------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialColComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialColComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialColComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialColComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialColComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::PartialRowComm() const
   ------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialRowComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialRowComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialRowComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialRowComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialRowComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* mpi::Comm AbstractDistMatrix<T>::PartialUnionColComm() const
   ------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixPartialUnionColComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionColComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionColComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionColComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionColComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );