python/core/DistMatrix.py


  lib.ElDistMatrixLocalRowOffset_i.argtypes = \
  lib.ElDistMatrixLocalRowOffset_s.argtypes = \
  lib.ElDistMatrixLocalRowOffset_d.argtypes = \
  lib.ElDistMatrixLocalRowOffset_c.argtypes = \
  lib.ElDistMatrixLocalRowOffset_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def LocalRowOffset(self,i):
    iLoc = iType()
    args = [self.obj,i,pointer(iLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalRowOffset_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalRowOffset_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalRowOffset_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalRowOffset_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalRowOffset_z(*args)
    else: DataExcept()
    return iLoc.value

  lib.ElDistMatrixLocalColOffset_i.argtypes = \
  lib.ElDistMatrixLocalColOffset_s.argtypes = \
  lib.ElDistMatrixLocalColOffset_d.argtypes = \
  lib.ElDistMatrixLocalColOffset_c.argtypes = \
  lib.ElDistMatrixLocalColOffset_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def LocalColOffset(self,j):
    jLoc = iType()
    args = [self.obj,j,pointer(jLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalColOffset_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalColOffset_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalColOffset_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalColOffset_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalColOffset_z(*args)
    else: DataExcept()
    return jLoc.value

  lib.ElDistMatrixGlobalRow_i.argtypes = \
  lib.ElDistMatrixGlobalRow_s.argtypes = \
  lib.ElDistMatrixGlobalRow_d.argtypes = \
  lib.ElDistMatrixGlobalRow_c.argtypes = \
  lib.ElDistMatrixGlobalRow_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def GlobalRow(self,iLoc):
    i = iType()
    args = [self.obj,iLoc,pointer(i)]
    if   self.tag == iTag: lib.ElDistMatrixGlobalRow_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixGlobalRow_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixGlobalRow_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixGlobalRow_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixGlobalRow_z(*args)
    else: DataExcept()
    return i.value

  lib.ElDistMatrixGlobalCol_i.argtypes = \
  lib.ElDistMatrixGlobalCol_s.argtypes = \
  lib.ElDistMatrixGlobalCol_d.argtypes = \
  lib.ElDistMatrixGlobalCol_c.argtypes = \
  lib.ElDistMatrixGlobalCol_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def GlobalCol(self,jLoc):
    j = iType()
    args = [self.obj,jLoc,pointer(j)]
    if   self.tag == iTag: lib.ElDistMatrixGlobalCol_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixGlobalCol_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixGlobalCol_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixGlobalCol_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixGlobalCol_z(*args)
    else: DataExcept()
    return j.value

  lib.ElDistMatrixIsLocalRow_i.argtypes = \
  lib.ElDistMatrixIsLocalRow_s.argtypes = \
  lib.ElDistMatrixIsLocalRow_d.argtypes = \
  lib.ElDistMatrixIsLocalRow_c.argtypes = \
  lib.ElDistMatrixIsLocalRow_z.argtypes = \
    [c_void_p,iType,POINTER(bType)]
  def IsLocalRow(self,i):
    isLocal = bType()
    args = [self.obj,i,pointer(isLoc)]
    if   self.tag == iTag: lib.ElDistMatrixIsLocalRow_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixIsLocalRow_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixIsLocalRow_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixIsLocalRow_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixIsLocalRow_z(*args)
    else: DataExcept()
    return isLocal.value

  lib.ElDistMatrixIsLocalCol_i.argtypes = \
  lib.ElDistMatrixIsLocalCol_s.argtypes = \
  lib.ElDistMatrixIsLocalCol_d.argtypes = \
  lib.ElDistMatrixIsLocalCol_c.argtypes = \
  lib.ElDistMatrixIsLocalCol_z.argtypes = \
    [c_void_p,iType,POINTER(bType)]
  def IsLocalCol(self,j):
    isLocal = bType()
    args = [self.obj,j,pointer(isLoc)]
    if   self.tag == iTag: lib.ElDistMatrixIsLocalCol_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixIsLocalCol_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixIsLocalCol_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixIsLocalCol_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixIsLocalCol_z(*args)
    else: DataExcept()
    return isLocal.value

  lib.ElDistMatrixIsLocal_i.argtypes = \
  lib.ElDistMatrixIsLocal_s.argtypes = \
  lib.ElDistMatrixIsLocal_d.argtypes = \
  lib.ElDistMatrixIsLocal_c.argtypes = \
  lib.ElDistMatrixIsLocal_z.argtypes = \
    [c_void_p,iType,iType,POINTER(bType)]
  def IsLocal(self,i,j):
    isLocal = bType()
    args = [self.obj,i,j,pointer(isLocal)]
    if   self.tag == iTag: lib.ElDistMatrixIsLocal_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixIsLocal_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixIsLocal_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixIsLocal_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixIsLocal_z(*args)
    else: DataExcept()
    return isLocal.value

  lib.ElDistMatrixDistData_i.argtypes = \
  lib.ElDistMatrixDistData_s.argtypes = \
  lib.ElDistMatrixDistData_d.argtypes = \
  lib.ElDistMatrixDistData_c.argtypes = \
  lib.ElDistMatrixDistData_z.argtypes = \
    [c_void_p,POINTER(DistData)]
  def GetDistData(self):
    distData = DistData()
    args = [self.obj,pointer(distData)]
    if   self.tag == iTag: lib.ElDistMatrixDistData_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDistData_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDistData_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDistData_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDistData_z(*args)
    else: DataExcept()
    return distData

  lib.ElDistMatrixDistComm_i.argtypes = \
  lib.ElDistMatrixDistComm_s.argtypes = \
  lib.ElDistMatrixDistComm_d.argtypes = \
  lib.ElDistMatrixDistComm_c.argtypes = \
  lib.ElDistMatrixDistComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def DistComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixDistComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDistComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDistComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDistComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDistComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixCrossComm_i.argtypes = \
  lib.ElDistMatrixCrossComm_s.argtypes = \
  lib.ElDistMatrixCrossComm_d.argtypes = \
  lib.ElDistMatrixCrossComm_c.argtypes = \
  lib.ElDistMatrixCrossComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def CrossComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixCrossComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixCrossComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixCrossComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixCrossComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixCrossComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixRedundantComm_i.argtypes = \
  lib.ElDistMatrixRedundantComm_s.argtypes = \
  lib.ElDistMatrixRedundantComm_d.argtypes = \
  lib.ElDistMatrixRedundantComm_c.argtypes = \
  lib.ElDistMatrixRedundantComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def RedundantComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixRedundantComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRedundantComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRedundantComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRedundantComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRedundantComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixColComm_i.argtypes = \
  lib.ElDistMatrixColComm_s.argtypes = \
  lib.ElDistMatrixColComm_d.argtypes = \
  lib.ElDistMatrixColComm_c.argtypes = \
  lib.ElDistMatrixColComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def ColComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixColComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixRowComm_i.argtypes = \
  lib.ElDistMatrixRowComm_s.argtypes = \
  lib.ElDistMatrixRowComm_d.argtypes = \
  lib.ElDistMatrixRowComm_c.argtypes = \
  lib.ElDistMatrixRowComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def RowComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixRowComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixPartialColComm_i.argtypes = \
  lib.ElDistMatrixPartialColComm_s.argtypes = \
  lib.ElDistMatrixPartialColComm_d.argtypes = \
  lib.ElDistMatrixPartialColComm_c.argtypes = \
  lib.ElDistMatrixPartialColComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def PartialColComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixPartialColComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialColComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialColComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialColComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialColComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixPartialRowComm_i.argtypes = \
  lib.ElDistMatrixPartialRowComm_s.argtypes = \
  lib.ElDistMatrixPartialRowComm_d.argtypes = \
  lib.ElDistMatrixPartialRowComm_c.argtypes = \
  lib.ElDistMatrixPartialRowComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def PartialRowComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixPartialRowComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialRowComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialRowComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialRowComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialRowComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixPartialUnionColComm_i.argtypes = \
  lib.ElDistMatrixPartialUnionColComm_s.argtypes = \
  lib.ElDistMatrixPartialUnionColComm_d.argtypes = \
  lib.ElDistMatrixPartialUnionColComm_c.argtypes = \
  lib.ElDistMatrixPartialUnionColComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def PartialUnionColComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionColComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionColComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionColComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionColComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionColComm_z(*args)
    else: DataExcept()
    return comm
